syntax = "proto3";

option java_multiple_files = true;
option java_package = "me.stojan.pasbox.storage";

message SQLiteKVStoreValue {
  bytes aes_gcm_iv = 1;
  bytes aes_gcm_ciphertext = 2;
}